# brkga-mTTP

./: CMakeLists.txt  README.md  mTTPChromosome.cpp  mTTPChromosome.h  mTTPDecoder.cpp  mTTPDecoder.h  mTTPInstance.cpp  mTTPInstance.h  main.cpp
brkgaAPI/: BRKGA.h
instances/: circ10.txt  circ12.txt  circ4.txt  circ6.txt  circ8.txt  nl10.txt  nl14.txt  nl16.txt  nl4.txt  nl6.txt  nl8.txt
